adversarial attack version 1

--- a/malicious_url_detection.ipynb
+++ b/malicious_url_detection.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import os.path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
+    "import scipy\n",
+    "from scipy.sparse import vstack\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -17,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 187,
    "metadata": {
     "scrolled": true
    },
@@ -49,58 +53,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>39995</th>\n",
-       "      <td>http://www.fjpengfei.com/index.asp</td>\n",
-       "      <td>1</td>\n",
+       "      <th>330727</th>\n",
+       "      <td>http://cxxrchive.scxxlisburyjourncxxl.co.uk/20...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39996</th>\n",
-       "      <td>http://www.fjpengfei.com/aboutme.asp?banner=1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>330728</th>\n",
+       "      <td>http://cxxstore.cxxmcxxzon.co.uk/cxxllezvinsfr...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39997</th>\n",
-       "      <td>http://www.fjpengfei.com/culture.asp?banner=2</td>\n",
-       "      <td>1</td>\n",
+       "      <th>330729</th>\n",
+       "      <td>http://cxxrchive.thisischeshire.co.uk/2000/1/1...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39998</th>\n",
-       "      <td>http://www.fjpengfei.com/news.asp?banner=4</td>\n",
-       "      <td>1</td>\n",
+       "      <th>330730</th>\n",
+       "      <td>http://cxxpplerugs.co.uk/rugs/product_info.php...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39999</th>\n",
-       "      <td>http://www.fjpengfei.com/project.asp?banner=5</td>\n",
-       "      <td>1</td>\n",
+       "      <th>330731</th>\n",
+       "      <td>http://cxxllgirltogcxxpcxxrty.co.uk/gcxxllery2...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 url  Label\n",
-       "39995             http://www.fjpengfei.com/index.asp      1\n",
-       "39996  http://www.fjpengfei.com/aboutme.asp?banner=1      1\n",
-       "39997  http://www.fjpengfei.com/culture.asp?banner=2      1\n",
-       "39998     http://www.fjpengfei.com/news.asp?banner=4      1\n",
-       "39999  http://www.fjpengfei.com/project.asp?banner=5      1"
+       "                                                      url  Label\n",
+       "330727  http://cxxrchive.scxxlisburyjourncxxl.co.uk/20...      4\n",
+       "330728  http://cxxstore.cxxmcxxzon.co.uk/cxxllezvinsfr...      4\n",
+       "330729  http://cxxrchive.thisischeshire.co.uk/2000/1/1...      4\n",
+       "330730  http://cxxpplerugs.co.uk/rugs/product_info.php...      4\n",
+       "330731  http://cxxllgirltogcxxpcxxrty.co.uk/gcxxllery2...      4"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reading data from csv file\n",
-    "data = pd.read_csv(\"Data.csv\")\n",
-    "data = data.head(40000)\n",
+    "data = pd.read_csv(\"Data2.csv\")\n",
+    "# data = data.head(165368)\n",
     "data.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +118,7 @@
        "Name: url, dtype: object"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,21 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<40000x57760 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 638775 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using Tokenizer\n",
     "vectorizer = TfidfVectorizer()\n",
@@ -153,31 +145,84 @@
     "# Store vectors into X variable as Our XFeatures\n",
     "X = vectorizer.fit_transform(url_list)\n",
     "\n",
-    "X"
+    "X_t = X[0]\n",
+    "for i in range(165372):\n",
+    "    ele = X[i + 1]\n",
+    "    X_t = vstack((X_t, ele))\n",
+    "\n",
+    "# X_t = X\n",
+    "# for i in range(165372,330731):\n",
+    "#     X_t=np.delete(X_t,i,axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<165373x175583 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 2199179 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_t = []\n",
+    "for i in range(165373):\n",
+    "    y_t.append(y[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split into training and testing dataset 80:20 ratio\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X_t, y_t, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\samzhang\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression()"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 203,
    "metadata": {
     "scrolled": true
    },
@@ -199,13 +244,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of our model is:  0.99675\n"
+      "Accuracy of our model is:  0.9856386999244142\n"
      ]
     }
    ],
    "source": [
     "# Accuracy of Our Model\n",
     "print(\"Accuracy of our model is: \",logit.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_a = X[165374]\n",
+    "for i in range(165374,330730):\n",
+    "    ele = X[i + 1]\n",
+    "    X_a = vstack((X_a, ele))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_a = []\n",
+    "for i in range(165374,330731):\n",
+    "    y_a.append(y[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of our model is:  0.9470720925028877\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy of our model is: \",logit.score(X_a, y_a))"
    ]
   }
  ],
